Change app font + icon adjustment HotelOperations

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -15,14 +15,14 @@
 				<div class="end-date">Sat 12.02.16</div>
 			</div>
 			<div class="other-details gray-color">
-				<span class="unitpal-font">:</span> {{arrivalItemVM.NumberOfPeople}}
-				<span class="unitpal-font">A</span> {{arrivalItemVM.NumberOfNights}}
+				<span class="unitpal-font f-12">(</span> {{arrivalItemVM.NumberOfPeople}}
+				<span class="unitpal-font f-12">Y</span> {{arrivalItemVM.NumberOfNights}}
 			</div>
 		</div>
 	</div>
 	<div class="footer">
 		<button class="btn btn-sm btn-danger">
-			CHECK IN <span class="unitpal-font">F</span>
+			CHECK IN <span class="unitpal-font">/</span>
 		</button>
 	</div>
 </div>
