--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/template/arrivals-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/template/arrivals-pane.html
@@ -1,7 +1,8 @@
 <div class="header">
 	<div class="pane-title">
-		<span class="f-24">Arrivals</span>
-		<i class="fa fa-suitcase orange-color p-l-12 f-16"></i>
+		<span class="f-24">Arrival</span>
+		<!--<i class="fa fa-suitcase orange-color p-l-12 f-16"></i>-->
+		<span class="unitpal-font orange-color p-l-12 f-24">/</span>
 	</div>
 	<div class="pane-search-bar">
 		<input class="remove-auto-border" type="text" placeholder="Search here">
