--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/components/departure-item/template/departure-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/components/departure-item/template/departure-item.html
@@ -6,16 +6,16 @@
 	<div class="room-type">Double Room</div>
 	<div class="booking-quick-details">
 		<div class="period orange-color">
-			<span class="unitpal-font  clickable p-r-6">D</span>
+			<span class="unitpal-font clickable f-12 p-r-6">-</span>
 		</div>
 		<div class="other-details gray-color">
-			<span class="unitpal-font">:</span> {{departureItemVM.NumberOfPeople}}
-			<span class="unitpal-font">A</span> {{departureItemVM.NumberOfNights}}
+			<span class="unitpal-font f-12">(</span> {{departureItemVM.NumberOfPeople}}
+			<span class="unitpal-font f-12">Y</span> {{departureItemVM.NumberOfNights}}
 		</div>
 	</div>
 </div>
 <div class="footer">
 	<button class="btn btn-sm btn-green ">
-		<span class="unitpal-font p-r-6">F</span> CHECK OUT 
+		<span class="unitpal-font p-r-6">.</span> CHECK OUT 
 	</button>
 </div>
