--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/template/departures-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/template/departures-pane.html
@@ -1,7 +1,8 @@
 <div class="header">
 	<div class="pane-title">
 		<span class="f-24">Departures</span>
-		<i class="fa fa-suitcase green-color p-l-12 f-16"></i>
+		<!--<i class="fa fa-suitcase green-color p-l-12 f-16"></i>-->
+		<span class="unitpal-font green-color p-l-12 f-24">.</span>
 	</div>
 
 	<div class="pane-search-bar">
