--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/rooms-canvas/components/room-card/template/room-card.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/rooms-canvas/components/room-card/template/room-card.html
@@ -7,7 +7,7 @@
 		<div class="section2 flex-row flex-jc-sb">
 			<div class="customer-name clickable">{{ roomVM.Properties.Booking.ClientName }}</div>
 			<div class="room-stats flex-row flex-center-v">
-				<div *ngIf="maintenance" class="clickable clickable circle-sm" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
+				<div *ngIf="maintenance" class="clickable f-18" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
 					<span class="unitpal-font">{{maintenance.icon}}</span>
 				</div>
 			</div>
@@ -20,8 +20,8 @@
 			<div class="end-date">{{ roomVM.Properties.Booking.Departure }}</div>
 		</div>
 		<div class="other-details gray-color flex-row flex-center-v">
-			<span class="unitpal-font">:</span> {{roomVM.Properties.Booking.NumberOfPeople}}
-			<span class="unitpal-font">A</span> {{roomVM.Properties.Booking.NumberOfNights}}
+			<span class="unitpal-font f-12">(</span> {{roomVM.Properties.Booking.NumberOfPeople}}
+			<span class="unitpal-font f-12">Y</span> {{roomVM.Properties.Booking.NumberOfNights}}
 		</div>
 	</div>
 </div>
@@ -35,7 +35,7 @@
 		<div class="section2 flex-row flex-jc-sb">
 			<div class="customer-name clickable"></div>
 			<div class="room-stats flex-row flex-center-v">
-				<div *ngIf="maintenance" class="clickable circle-sm" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
+				<div *ngIf="maintenance" class="clickable f-18" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
 					<span class="unitpal-font">{{maintenance.icon}}</span>
 				</div>
 			</div>
@@ -59,7 +59,7 @@
 		<div class="section2 flex-row flex-jc-sb">
 			<div class="customer-name clickable"></div>
 			<div class="room-stats flex-row flex-center-v">
-				<div *ngIf="maintenance" class="clickable circle-sm" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
+				<div *ngIf="maintenance" class="clickable f-18" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
 					<span class="unitpal-font">{{maintenance.icon}}</span>
 				</div>
 			</div>
@@ -83,7 +83,7 @@
 		<div class="section2 flex-row flex-jc-sb">
 			<div class="customer-name clickable"></div>
 			<div class="room-stats flex-row flex-center-v">
-				<div *ngIf="maintenance" class="clickable circle-sm" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
+				<div *ngIf="maintenance" class="clickable f-18" [ngClass]="maintenance.cssClass" (click)="maintenance.clickHandler()" title="{{maintenance.title}}">
 					<span class="unitpal-font">{{maintenance.icon}}</span>
 				</div>
 			</div>
