--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/booking-history/components/bookings-date-filter/template/bookings-date-filter.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/booking-history/components/bookings-date-filter/template/bookings-date-filter.html
@@ -1,1 +1,7 @@
-<th-date-interval-picker [showExpandedView]="true" [showLabels]="false"></th-date-interval-picker>
+<th-date-interval-picker 
+    [showExpandedView]="true" 
+    [showLabels]="false"
+    [initialThDateInterval]="searchInterval" 
+    (didSelectThDateInterval)="didSelectSearchInterval($event)"
+    >
+</th-date-interval-picker>
