[T245] Trigger on booking add event & refresh booking list

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/modal/template/new-booking-modal.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/modal/template/new-booking-modal.html
@@ -1,6 +1,7 @@
 <div class="card">
 	<new-booking-container 
 		showCloseButton="true"
+		(onBookingsAdded)="didAddBookings($event)"
 		(onCloseButtonPressed)="closeDialog($event)">	
 	</new-booking-container>
 </div>
