HotelOperations - small styling fixes

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -14,7 +14,7 @@
 				<i class="fa fa-arrow-right"></i>
 				<div class="end-date">Sat 12.02.16</div>
 			</div>
-			<div class="other-details gray-color">
+			<div class="other-details gray-color f-12">
 				<span class="unitpal-font f-12">(</span> {{arrivalItemVM.NumberOfPeople}}
 				<span class="unitpal-font f-12">Y</span> {{arrivalItemVM.NumberOfNights}}
 			</div>
