--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/components/departure-item/template/departure-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/components/departure-item/template/departure-item.html
@@ -8,7 +8,7 @@
 		<div class="period orange-color">
 			<span class="unitpal-font clickable f-12 p-r-6">-</span>
 		</div>
-		<div class="other-details gray-color">
+		<div class="other-details gray-color f-12">
 			<span class="unitpal-font f-12">(</span> {{departureItemVM.NumberOfPeople}}
 			<span class="unitpal-font f-12">Y</span> {{departureItemVM.NumberOfNights}}
 		</div>
