--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/rooms-canvas/components/room-card/template/room-card.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/rooms-canvas/components/room-card/template/room-card.html
@@ -19,7 +19,7 @@
 			<i class="fa fa-arrow-right"></i>
 			<div class="end-date">{{ roomVM.Properties.Booking.Departure }}</div>
 		</div>
-		<div class="other-details gray-color flex-row flex-center-v">
+		<div class="other-details gray-color flex-row flex-center-v f-12">
 			<span class="unitpal-font f-12">(</span> {{roomVM.Properties.Booking.NumberOfPeople}}
 			<span class="unitpal-font f-12">Y</span> {{roomVM.Properties.Booking.NumberOfNights}}
 		</div>
