--- a/assets/client/src/pages/internal/containers/home/main/template/main-home-component.html
+++ b/assets/client/src/pages/internal/containers/home/main/template/main-home-component.html
@@ -4,6 +4,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12 col-md-12 full-height">
+		<!--<div class="full-height">-->
 			<router-outlet></router-outlet>
 		</div>
 	</div>
