--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/template/hotel-operations-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/template/hotel-operations-dashboard.html
@@ -1,3 +1,7 @@
-<arrivals-pane [hotelOperationsDashboard]="self" class="pane full-height"></arrivals-pane>
-<rooms-canvas [hotelOperationsDashboard]="self" ></rooms-canvas>
-<departures-pane [hotelOperationsDashboard]="self" class="pane full-height"></departures-pane>
+<div class="row full-height">
+	<div class="hotel-operations-dashboard">
+		<arrivals-pane [hotelOperationsDashboard]="self" class="pane full-height"></arrivals-pane>
+		<rooms-canvas [hotelOperationsDashboard]="self" ></rooms-canvas>
+		<departures-pane [hotelOperationsDashboard]="self" class="pane full-height"></departures-pane>
+	</div>
+</div>
