added restrictedInterval option to DateIntervalPicker

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/booking-history/components/bookings-date-filter/template/bookings-date-filter.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/booking-history/components/bookings-date-filter/template/bookings-date-filter.html
@@ -2,6 +2,7 @@
     [showExpandedView]="true" 
     [showLabels]="false"
     [initialThDateInterval]="searchInterval" 
+    [restrictedInterval]="true"
     (didSelectThDateInterval)="didSelectSearchInterval($event)"
     >
 </th-date-interval-picker>
