Hotel Operations - drag enhancementes + VM renames

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/template/arrivals-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/template/arrivals-pane.html
@@ -15,7 +15,9 @@
 		[ngClass]="{'selected': isArrivalItemSelected(arrivalItemVM)}" 
 		[arrivalItemVM] = "arrivalItemVM" 
 		(click) = "selectArrivalItem(arrivalItemVM)"
-		(startedDragging)="startedDragging($event)">
+		(startedDragging)="startedDragging($event)"
+		(stoppedDragging)="stoppedDragging($event)"
+		>
 	</arrival-item>
 </div>
 <div class="footer">
