--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -4,19 +4,19 @@
 </div>
 <div class="right p-6">
 	<div class="header clickable">
-		{{arrivalItemVM.ClientName}}
+		{{arrivalItemVM.clientName}}
 	</div>
 	<div class="body">
-		<div class="room-type">Double Room</div>
+		<div class="room-type">{{ arrivalItemVM.roomType }}</div>
 		<div class="booking-quick-details">
 			<div class="period">
-				<div class="start-date">Fri 5.02.16</div>
+				<div class="start-date">{{arrivalItemVM.arrival}}</div>
 				<i class="fa fa-arrow-right"></i>
-				<div class="end-date">Sat 12.02.16</div>
+				<div class="end-date">{{arrivalItemVM.departure}}</div>
 			</div>
 			<div class="other-details gray-color f-12">
-				<span class="unitpal-font f-12">(</span> {{arrivalItemVM.NumberOfPeople}}
-				<span class="unitpal-font f-12">Y</span> {{arrivalItemVM.NumberOfNights}}
+				<span class="unitpal-font f-12">(</span> {{arrivalItemVM.numberOfPeople}}
+				<span class="unitpal-font f-12">Y</span> {{arrivalItemVM.numberOfNights}}
 			</div>
 		</div>
 	</div>
