--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/components/departure-item/template/departure-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/departures-pane/components/departure-item/template/departure-item.html
@@ -1,16 +1,16 @@
 <div class="header clickable">
-	<span><b>501</b></span>
-	<span>{{departureItemVM.ClientName}}</span>
+	<span><b>{{departureItemVM.roomName}}</b></span>
+	<span>{{departureItemVM.clientName}}</span>
 </div>
 <div class="body">
-	<div class="room-type">Double Room</div>
+	<div class="room-type">{{departureItemVM.roomType}}</div>
 	<div class="booking-quick-details">
 		<div class="period orange-color">
 			<span class="unitpal-font clickable f-12 p-r-6">-</span>
 		</div>
 		<div class="other-details gray-color f-12">
-			<span class="unitpal-font f-12">(</span> {{departureItemVM.NumberOfPeople}}
-			<span class="unitpal-font f-12">Y</span> {{departureItemVM.NumberOfNights}}
+			<span class="unitpal-font f-12">(</span> {{departureItemVM.numberOfPeople}}
+			<span class="unitpal-font f-12">Y</span> {{departureItemVM.numberOfNights}}
 		</div>
 	</div>
 </div>
