--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -2196,10 +2196,33 @@ a.btn.btn-square:focus {
             margin-left: 6px;
             margin-top: 6px;
             flex-shrink: 0;
+            border-radius: 3px;
             border-top: 2px solid #b9b9b9;
             border-right: 2px solid #b9b9b9;
             border-bottom: 2px solid #b9b9b9;
-            border-radius: 3px;
+        }
+
+        .room-card.ghost{
+            opacity: 0.65
+        }
+
+        .room-card.accepts-drop{
+            opacity: 1 !important;
+            background-color: #e9ffe9;
+        }
+
+        .room-card.tick-border{
+            border-top: 3px solid;
+            border-right: 3px solid;
+            border-bottom: 3px solid;
+        }
+
+        .room-card.free.tick-border{
+            border-color: #5cb85c;
+        }
+
+        .room-card.reserved.tick-border{
+            border-color: #ffe800;
         }
 
         .room-card .card-header{
