Renamed VM fields

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -10,9 +10,9 @@
 		<div class="room-type">{{ arrivalItemVM.roomType }}</div>
 		<div class="booking-quick-details">
 			<div class="period">
-				<div class="start-date">{{arrivalItemVM.arrival}}</div>
+				<div class="start-date">{{arrivalItemVM.arrivalLabel}}</div>
 				<i class="fa fa-arrow-right"></i>
-				<div class="end-date">{{arrivalItemVM.departure}}</div>
+				<div class="end-date">{{arrivalItemVM.departureLabel}}</div>
 			</div>
 			<div class="other-details gray-color f-12">
 				<span class="unitpal-font f-12">(</span> {{arrivalItemVM.numberOfPeople}}
