--- a/views/external.ejs
+++ b/views/external.ejs
@@ -12,6 +12,9 @@
 
 	<title>UnitPal</title>
 
+	<!-- Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+
 	<!-- CSS -->
 	<link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
