--- a/views/reports/booking-confirmation.ejs
+++ b/views/reports/booking-confirmation.ejs
@@ -9,7 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>UnitPal</title>
-
+    
+    <!-- Fonts -->
+    <link href='assets/client/static-assets/css/roboto-font.css' rel='stylesheet' type='text/css'>
+    
     <!-- CSS -->
     <link href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
