--- a/views/external.ejs
+++ b/views/external.ejs
@@ -13,7 +13,7 @@
 	<title>UnitPal</title>
 
 	<!-- Fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='/client/static-assets/css/roboto-font.css' rel='stylesheet' type='text/css'>
 
 	<!-- CSS -->
 	<link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
