--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -1,22 +1,176 @@
 <html>
-<header>
-    <title>This is title</title>
-</header>
+
+<head>
+    <base href="../../../">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!-- Meta, title, CSS, favicons, etc. -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Invoice</title>
+    
+    <!-- Fonts -->
+    <link href='assets/client/static-assets/css/roboto-font.css' rel='stylesheet' type='text/css'>
+    
+    <!-- CSS -->
+    <link href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="assets/client/static-assets/css/custom.css" rel="stylesheet">
+    <link href="assets/client/static-assets/css/unitpal-print.css" rel="stylesheet">
+
+    <!-- JS Libraries -->
+    <script src="assets/node_modules/jquery.1/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+</head>
 
 <body>
-    <!--<div style="page-break-after:always;">-->
-    <div style="page-break-after:always;">
-        <h1>Invoice - Page 1</h1>
+    <section class="content invoice">
+        <!-- title row -->
+        <div class="row">
+            <div class="col-xs-12 invoice-header">
+                <h1>
+                    <i class="fa fa-globe"></i> Invoice.
+                    <small class="pull-right">Date: 16/08/2016</small>
+                </h1>
+            </div>
+            <!-- /.col -->
+        </div>
+        <!-- info row -->
+        <div class="row invoice-info">
+            <div class="col-sm-4 invoice-col">
+                From
+                <address>
+                    <strong>Iron Admin, Inc.</strong>
+                    <br>795 Freedom Ave, Suite 600
+                    <br>New York, CA 94107
+                    <br>Phone: 1 (804) 123-9876
+                    <br>Email: ironadmin.com
+                </address>
+            </div>
+            <!-- /.col -->
+            <div class="col-sm-4 invoice-col">
+                To
+                <address>
+                    <strong>John Doe</strong>
+                    <br>795 Freedom Ave, Suite 600
+                    <br>New York, CA 94107
+                    <br>Phone: 1 (804) 123-9876
+                    <br>Email: jon@ironadmin.com
+                </address>
+            </div>
+            <!-- /.col -->
+            <div class="col-sm-4 invoice-col">
+                <b>Invoice #007612</b>
+                <br>
+                <br>
+                <b>Order ID:</b> 4F3S8J
+                <br>
+                <b>Payment Due:</b> 2/22/2014
+                <br>
+                <b>Account:</b> 968-34567
+            </div>
+            <!-- /.col -->
+        </div>
+        <!-- /.row -->
 
-        <% if (user) { %>
-            <h2><%= user.email %></h2>
-            <% } %>
+        <!-- Table row -->
+        <div class="row">
+            <div class="col-xs-12 table">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Qty</th>
+                            <th>Product</th>
+                            <th>Serial #</th>
+                            <th style="width: 59%">Description</th>
+                            <th>Subtotal</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Call of Duty</td>
+                            <td>455-981-221</td>
+                            <td>El snort testosterone trophy driving gloves handsome gerry Richardson helvetica tousled street
+                                art master testosterone trophy driving gloves handsome gerry Richardson
+                            </td>
+                            <td>$64.50</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Need for Speed IV</td>
+                            <td>247-925-726</td>
+                            <td>Wes Anderson umami biodiesel</td>
+                            <td>$50.00</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Monsters DVD</td>
+                            <td>735-845-642</td>
+                            <td>Terry Richardson helvetica tousled street art master, El snort testosterone trophy driving gloves
+                                handsome letterpress erry Richardson helvetica tousled
+                            </td>
+                            <td>$10.70</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Grown Ups Blue Ray</td>
+                            <td>422-568-642</td>
+                            <td>Tousled lomo letterpress erry Richardson helvetica tousled street art master helvetica tousled
+                                street art master, El snort testosterone</td>
+                            <td>$25.99</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- /.col -->
+        </div>
+        <!-- /.row -->
 
-    </div>
-
-    <div>
-        <h1>Invoice - Page 2</h1>
-    </div>
+        <div class="row">
+            <!-- accepted payments column -->
+            <div class="col-xs-6">
+                <p class="lead">Payment Methods:</p>
+                <i class="fa fa-money" ng-reflect-raw-class="fa-money" ng-reflect-initial-classes="fa"></i>
+                <i class="fa fa-cc-visa" ng-reflect-raw-class="fa-cc-visa" ng-reflect-initial-classes="fa"></i>
+                <i class="fa fa-cc-amex" ng-reflect-raw-class="fa-cc-amex" ng-reflect-initial-classes="fa"></i>
+                <i class="fa fa-cc-mastercard" ng-reflect-raw-class="fa-cc-mastercard" ng-reflect-initial-classes="fa"></i>
+                <p class="text-muted well well-sm no-shadow" style="margin-top: 10px;">
+                    Details, more info, etc
+                </p>
+            </div>
+            <!-- /.col -->
+            <div class="col-xs-6">
+                <p class="lead">Amount Due 2/22/2014</p>
+                <div class="table-responsive">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <th style="width:50%">Subtotal:</th>
+                                <td>$250.30</td>
+                            </tr>
+                            <tr>
+                                <th>Tax (9.3%)</th>
+                                <td>$10.34</td>
+                            </tr>
+                            <tr>
+                                <th>Shipping:</th>
+                                <td>$5.80</td>
+                            </tr>
+                            <tr>
+                                <th>Total:</th>
+                                <td>$265.24</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
