--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -888,6 +888,10 @@ td room-categ-capacity {
     background: #8E44AD;
 }
 
+.dimmed-item {
+    opacity: 0.7;
+}
+
 .yield-filter {
     height: 60px;
     overflow: hidden;
@@ -2740,4 +2744,7 @@ a.btn.btn-square:focus {
     border-left: 1px solid #ccc;
     padding: 12px 15px 0 15px;
     height: 100%;
+}
+.operational-important-field {
+    color: #fc8433;
 }
