Updated ArrivalsPane to new VM

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/container/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -4,10 +4,10 @@
 </div>
 <div class="right p-6">
 	<div class="header clickable">
-		{{arrivalItemVM.clientName}}
+		{{arrivalItemVM.customerName}}
 	</div>
 	<div class="body">
-		<div class="room-type">{{ arrivalItemVM.roomType }}</div>
+		<div class="room-type">{{ arrivalItemVM.roomCategory }}</div>
 		<div class="booking-quick-details">
 			<div class="period">
 				<div class="start-date">{{arrivalItemVM.arrivalLabel}}</div>
